# standmeet-observer

./: .appveyor.yml  .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  Makefile  README.md  cli.py  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  install.sh  package-lock.json  package.json  pyproject.toml  ruff.toml  vulture_whitelist.py
.github/workflows/: windows-screen-test.yml
.husky/: pre-commit
audio/: pyproject.toml
audio/src/audio/: __main__.py  config.py  daemon.py  db.py  engine_client.py  recorder.py  transcriber.py
audio/tests/: test_engine_client.py
capture/: pyproject.toml
capture/src/capture/: __main__.py  config.py  daemon.py  db.py  engine_client.py
capture/src/capture/backends/: __init__.py  macos.py  windows.py
capture/src/capture/collectors/: __init__.py  browser_macos.py  browser_windows.py  oslog_macos.py  shell_macos.py  shell_windows.py
capture/tests/: test_engine_client.py
scripts/: setup.sh
sources/builtin/audio/: pyproject.toml
sources/builtin/audio/src/audio_source/: __init__.py  recorder.py  transcriber.py
sources/builtin/bash/: pyproject.toml
sources/builtin/chrome/: pyproject.toml
sources/builtin/oslog/: pyproject.toml
sources/builtin/safari/: pyproject.toml
sources/builtin/screen/: pyproject.toml
sources/builtin/screen/src/screen_source/: __init__.py  backends.py  macos.py
sources/builtin/screen/tests/: test_windows_capture.py
sources/builtin/zsh/: pyproject.toml
sources/builtin/zsh/src/zsh_source/: __init__.py
sources/framework/: Dockerfile.test  pyproject.toml
sources/framework/src/source_framework/: __main__.py
sources/framework/tests/: test_plugin.py  test_runner.py  test_watchdog_integration.py  test_zsh_source.py
src/engine/: config.py  db.py  llm.py  main.py  tasks.py
src/engine/agents/: repository.py  sdk.py  service.py
src/engine/agents/tools/: audit.py  chat_mcp.py  compose_mcp.py  dedup.py  distill.py  distill_mcp.py  recall.py  trend.py
src/engine/api/: chat.py  routes.py
src/engine/application/: chat.py  compose_routines.py  da.py  distill_playbooks.py  extract_episodes.py  gc.py  scrum_master.py
src/engine/domain/episode/: entity.py
src/engine/domain/observation/: entity.py  filter.py
src/engine/domain/playbook/: entity.py  validation.py
src/engine/domain/prompt/: chat.py  da.py  episode.py  playbook.py  routine.py  scm.py
src/engine/domain/prompts/: playbook_agent.py
src/engine/domain/routine/: entity.py
src/engine/etl/: collect.py  entities.py  filter.py  repository.py
src/engine/etl/sources/: base.py  manifest_registry.py
src/engine/experiments/: runner.py
src/engine/infra/: db.py  llm.py  log_mutation.py
src/engine/infrastructure/agent/: repository.py  sdk.py  service.py
src/engine/infrastructure/agent/tools/: audit.py  chat_mcp.py  compose_mcp.py  da_mcp.py  dedup.py  distill_mcp.py  gc_mcp.py  scm_mcp.py
src/engine/infrastructure/etl/: collect.py  repository.py
src/engine/infrastructure/etl/sources/: base.py  manifest_registry.py
src/engine/infrastructure/llm/: anthropic.py  client.py  openai.py  types.py
src/engine/infrastructure/observability/: logger.py  repository.py
src/engine/infrastructure/persistence/: db.py  engine.py  models.py  session.py  sync_db.py
src/engine/infrastructure/pipeline/: budget.py  decay.py  orchestrator.py  repository.py
src/engine/infrastructure/pipeline/stages/: extract.py  validate.py
src/engine/infrastructure/scheduler/: tasks.py
src/engine/interfaces/api/: engine.py  memory.py  routes.py  sources.py
src/engine/llm/: __init__.py  client.py  types.py
src/engine/llm/adapters/: agent_sdk.py  anthropic.py
src/engine/observability/: __init__.py  logger.py  repository.py
src/engine/pipeline/: budget.py  chat.py  collector.py  decay.py  distill.py  episode.py  filter.py  log_mutation.py  memory_file.py  orchestrator.py  repository.py  routines.py
src/engine/pipeline/stages/: collect.py  compose.py  distill.py  distill_mcp.py  distill_tools.py  extract.py  validate.py
src/engine/prompts/: chat.py  compose_agent.py  episode.py  playbook.py  playbook_agent.py  routine.py
src/engine/scheduler/: tasks.py
src/engine/storage/: __init__.py  db.py  engine.py  memory_file.py  models.py  session.py  sync_db.py
tests/: conftest.py  test_api.py  test_audit.py  test_backfill.py  test_budget.py  test_capture_recall.py  test_chat.py  test_collector.py  test_da.py  test_db.py  test_decay.py  test_dedup.py  test_filter.py  test_huey_consumer.py  test_launchd.py  test_manifest_registry.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_raw_gc.py  test_recall.py  test_scm.py  test_source_api.py  test_tasks_sync.py  test_trend.py
tests/experiments/prompts/v3/: episode.txt  playbook.txt  routine.txt
tests/experiments/prompts/v4/: episode.txt  playbook.txt  routine.txt
tests/experiments/prompts/v5/: playbook.txt  routine.txt
tests/experiments/prompts/v6/: episode.txt  playbook.txt  routine.txt
tests/integration/: test_agentic_distill.py  test_agentic_routines.py  test_oauth_api.py  test_web_search.py
tests_unit/: conftest.py  test_agent_sdk_parsing.py  test_collector.py  test_filter.py  test_launchd_daemon.py  test_validate.py
web/: Dockerfile.test  Dockerfile.unit  eslint.config.js  knip.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx
web/src/components/: AudioPanel.tsx  ChatPanel.tsx  EpisodesPanel.tsx  FramesPanel.tsx  InsightsPanel.tsx  LogsPanel.tsx  ManagePanel.tsx  OsEventsPanel.tsx  Pagination.tsx  PlaybooksPanel.tsx  PromptEditor.tsx  RoutinesPanel.tsx  SearchInput.tsx  SelectionBar.tsx  SourceDataPanel.tsx  TasksPanel.tsx  UsagePanel.tsx
web/src/lib/: api.test.ts  api.ts  pagination.test.ts  pagination.ts  utils.test.ts
web/src/styles/: chat-markdown.css
web/tests/: chat.test.ts  dashboard.test.ts  global-setup.ts  global-teardown.ts  helpers.ts  memory.test.ts  navigation.test.ts  panels.test.ts  pipeline.test.ts  selection.test.ts  tasks.test.ts
