[project]
name = "observer"
version = "0.1.0"
description = "Behavioral distillation engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "anthropic>=0.52",
    "aiosqlite>=0.21",
    "huey>=2.5",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "claude-agent-sdk>=0.1.48",
    "openai>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.importlinter]
root_packages = ["engine"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Engine layered architecture"
type = "layers"
layers = [
    "engine.api",
    "engine.tasks",
    "engine.pipeline",
    "engine.llm",
    "engine.db",
    "engine.config",
]

[dependency-groups]
dev = [
    "import-linter>=2.11",
]
