[project]
name = "observer"
version = "0.1.0"
description = "Behavioral distillation engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "anthropic>=0.52",
    "aiosqlite>=0.21",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "huey>=2.5",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "claude-agent-sdk>=0.1.52",
    "openai>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/integration"

[tool.importlinter]
root_packages = ["engine"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Engine layered architecture"
type = "layers"
layers = [
    "engine.interfaces",
    "engine.scheduler",
    "engine.application",
    "engine.infrastructure",
    "engine.domain",
    "engine.config",
]

[tool.vulture]
paths = ["src/engine", "vulture_whitelist.py"]
min_confidence = 60
ignore_decorators = [
    "@router.*",
    "@app.*",
    "@mcp.*",
    "@pytest.*",
    "@log_mutation",
]
ignore_names = [
    "model_config",
    "Meta",
]

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "vulture>=2.15",
]
