[project]
name = "observer-audio"
version = "0.1.0"
description = "Cross-platform audio capture daemon for observer"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "faster-whisper>=1.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
