[project]
name = "source-framework"
version = "0.1.0"
description = "Plugin framework for Observer source plugins"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/source_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
