[project]
name = "observer-source-audio"
version = "0.1.0"
description = "Audio capture + transcription source plugin for Observer"
requires-python = ">=3.12"
dependencies = [
    "source-framework",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "faster-whisper>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_source"]

[tool.uv.sources]
source-framework = { path = "../../framework" }
