[project]
name = "observer-source-chrome"
version = "0.1.0"
description = "Chrome browser URL tracking source plugin for Observer"
requires-python = ">=3.12"
dependencies = ["source-framework"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chrome_source"]

[tool.uv.sources]
source-framework = { path = "../../framework" }
