[project]
name = "observer-source-oslog"
version = "0.1.0"
description = "macOS os_log system events source plugin for Observer"
requires-python = ">=3.12"
dependencies = ["source-framework", "ijson>=3.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oslog_source"]

[tool.uv.sources]
source-framework = { path = "../../framework" }
