[project]
name = "observer-source-zsh"
version = "0.1.0"
description = "Zsh shell history source plugin for Observer"
requires-python = ">=3.12"
dependencies = [
    "source-framework",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zsh_source"]

[tool.uv.sources]
source-framework = { path = "../../framework" }
